--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.6.2",
     "graphql-yoga": "^1.18.3",
     "lodash": "^4.17.20"
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.6.2"
   }
 }
